[package]
name = "axyl-theme-changer"
version = "0.1.0"
edition = "2021"
authors = [ "Jacob Strader" ]
description = "Change color scheme of Axyl Linux Distro (bspwm w/ Alacritty, Polybar, Neovim, etc.)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
